--- a/publis.html
+++ b/publis.html
@@ -179,15 +179,17 @@ Waves13_carvalho.pdf' style='text-decoration: none; z-index:100; bottom: -0.4ex;
 			
 		    			<h1>Ph.D</h1>
 		    			<li >
-		    				Mathematical and numericla study of plasmonic structure with corners.
+		    				Mathematical and numerical study of plasmonic structure with corners.
 				
 		    <span >&nbsp;&nbsp;</span> [ <a href="These_carvalho.pdf" title='charger These_carvalho.pdf' style='text-decoration: none; z-index:100; bottom: -0.4ex;' class='iconButton loadButton'> PDF </a> ] &nbsp;&nbsp;	<span >&nbsp;&nbsp;</span> [ <a href="these_carvalho_soutenance.pdf" title='charger these_carvalho_soutenance.pdf' style='text-decoration: none; z-index:100; bottom: -0.4ex;' class='iconButton loadButton'> Defense </a> ] &nbsp;&nbsp;</li>
 			
 			
-  			<h1>Codes</h1>
+  			<h1>Codes (public on Github)</h1>
   			<ol class='publisItems' reversed = "">
-				 <li > <a href="https://github.com/arnolddkim/Asymptotic-DLP"title="DLP">[Asymptotic methods for the close evaluation problem]</a></li>
-				  <li > <a href="https://zenodo.org/record/3934284"title="ST">[Subtraction techniques for the close evaluation problem]</a></li>
+				<li > <a href="https://github.com/zmoitier/Scattering_BIE_QPAX"title="QPAX">[Quadrature by Parity eXpansions for scattering]</a> (Python)</li>
+				<li > <a href="https://github.com/zmoitier/Asymptotic_metacavity"title="Metacavity">[Asymptotics for metamaterial cavities]</a> (Python)</li>
+				  <li > <a href="https://zenodo.org/record/3934284"title="ST">[Subtraction techniques for the close evaluation problem]</a> (Matlab)</li>
+				 <li > <a href="https://github.com/arnolddkim/Asymptotic-DLP"title="DLP">[Asymptotic methods for the close evaluation problem]</a> (Mathematica)</li>
 			
   			<h1 >Talks</h1>
   			<ol class='publisItems' reversed = "">
