--- a/publis.html
+++ b/publis.html
@@ -184,11 +184,11 @@ Waves13_carvalho.pdf' style='text-decoration: none; z-index:100; bottom: -0.4ex;
 		    <span >&nbsp;&nbsp;</span> [ <a href="These_carvalho.pdf" title='charger These_carvalho.pdf' style='text-decoration: none; z-index:100; bottom: -0.4ex;' class='iconButton loadButton'> PDF </a> ] &nbsp;&nbsp;	<span >&nbsp;&nbsp;</span> [ <a href="these_carvalho_soutenance.pdf" title='charger these_carvalho_soutenance.pdf' style='text-decoration: none; z-index:100; bottom: -0.4ex;' class='iconButton loadButton'> Defense </a> ] &nbsp;&nbsp;</li>
 			
 			
-  			<h1>Codes (public on Github)</h1>
+  			<h1>Codes</h1>
   			<ol class='publisItems' reversed = "">
-				<li > <a href="https://github.com/zmoitier/Scattering_BIE_QPAX"title="QPAX">[Quadrature by Parity eXpansions for scattering]</a> (Python)</li>
-				<li > <a href="https://github.com/zmoitier/Asymptotic_metacavity"title="Metacavity">[Asymptotics for metamaterial cavities]</a> (Python)</li>
-				  <li > <a href="https://zenodo.org/record/3934284"title="ST">[Subtraction techniques for the close evaluation problem]</a> (Matlab)</li>
+				<li > <a href="https://github.com/zmoitier/Scattering_BIE_QPAX"title="QPAX">[Quadrature by Parity eXpansions for scattering]</a> (Python) <img src="https://zenodo.org/badge/DOI/10.5281/zenodo.4692601.svg" alt = "DOI"></li>
+				<li > <a href="https://github.com/zmoitier/Asymptotic_metacavity"title="Metacavity">[Asymptotics for metamaterial cavities]</a> (Python) <img src="https://zenodo.org/badge/DOI/10.5281/zenodo.4716362.svg" alt = "DOI"></li>
+				  <li > <a href="https://zenodo.org/record/3934284"title="ST">[Subtraction techniques for the close evaluation problem]</a> (Matlab)  <img src="https://zenodo.org/badge/DOI/10.5281/zenodo.3934284.svg" alt = "DOI"></li>
 				 <li > <a href="https://github.com/arnolddkim/Asymptotic-DLP"title="DLP">[Asymptotic methods for the close evaluation problem]</a> (Mathematica)</li>
 			
   			<h1 >Talks</h1>
