--- a/group.html
+++ b/group.html
@@ -76,7 +76,7 @@
 		      <table>
         <tbody>
           <tr>
-			  <td> <img src="img/photos/new.jpg" width="100"></td>
+			  <td> <img src="img/photos/cc21.jpg" width="134"></td>
             <td> <img src="img/photos/blatham.jpg" width="108">  </td>
 			<td>  <img src="img/photos/cmccullough.jpg" width="110"> </td>
 			<td>  <img src="img/ecortes.png" width="105"> </td>
