update publis and teaching

--- a/Teaching.html
+++ b/Teaching.html
@@ -66,86 +66,33 @@
 
     <!-- #page: holds all page content, as well as footer -->
     <div id="page">
-		<h2>Spring 2021 </h2>
-        <ul>
-		  <li>Instructor for <a href="https://catalog.ucmerced.edu/preview_course_nopop.php?catoid=6&coid=12511"> Math 150</a>: Mathematical modeling, at UC Merced</li>
-	    </ul>
-  		<h2>Fall 2020 </h2>
-          <ul>
-  		  <li>Instructor for Math 24 : Linear Algebra and Differential Equations, at UC Merced</li>
-		    </ul>
-            <ul>
-    		  <li>Instructor for Math 292 : Boundary Integral Methods, at UC Merced</li>
-  		    </ul>
-  		<h2>Spring 2020 </h2>
-          <ul>
-  		  <li>Instructor for <a href="https://catalog.ucmerced.edu/preview_course_nopop.php?catoid=6&coid=12511"> Math 150</a>: Mathematical modeling, at UC Merced</li>
-		    </ul>
-		<h2>Fall 2019 </h2>
-        <ul>
-		  <li>Instructor for <a href="https://catalog.ucmerced.edu/preview_course_nopop.php?catoid=2&coid=2164"> Math 122</a>: complex analysis, at UC Merced</li>
-		    </ul>
-  		<h2>Spring 2019 </h2>
-          <ul>
-  		  <li>Instructor for <a href="https://catalog.ucmerced.edu/preview_course_nopop.php?catoid=6&coid=12511"> Math 150</a>: Mathematical modeling, at UC Merced</li>
-		    </ul>
-		<h2>Spring 2018 </h2>
-        <ul>
-		  <li>Instructor for <a href="http://catalog.ucmerced.edu/preview_course_nopop.php?catoid=2&coid=2167"> Math 131</a>: Numerical Analysis for Engineers, at UC Merced</li>
+        <h2>2016-present: Instructor at UC Merced</h2>
+		
+		  <li>Fall 2021: Instructor for <a href="https://catalog.ucmerced.edu/preview_course_nopop.php?catoid=2&coid=2164"> Math 122</a>: complex analysis, at UC Merced</li>
+		  <li>Spring 2021: Instructor for <a href="https://catalog.ucmerced.edu/preview_course_nopop.php?catoid=6&coid=12511"> Math 150</a>: Mathematical modeling, at UC Merced</li>
+  		  <li>Fall 2020: Instructor for Math 24 : Linear Algebra and Differential Equations, at UC Merced</li>
+    		  <li>Fall 2020: Instructor for Math 292 : Boundary Integral Methods, at UC Merced</li>
+  		  <li>Spring 2020: Instructor for <a href="https://catalog.ucmerced.edu/preview_course_nopop.php?catoid=6&coid=12511"> Math 150</a>: Mathematical modeling, at UC Merced</li>
+		  <li>Fall 2019: Instructor for <a href="https://catalog.ucmerced.edu/preview_course_nopop.php?catoid=2&coid=2164"> Math 122</a>: complex analysis, at UC Merced</li>
+  		  <li>Spring 2019: Instructor for <a href="https://catalog.ucmerced.edu/preview_course_nopop.php?catoid=6&coid=12511"> Math 150</a>: Mathematical modeling, at UC Merced</li>
+		  <li>Spring 2018: Instructor for <a href="http://catalog.ucmerced.edu/preview_course_nopop.php?catoid=2&coid=2167"> Math 131</a>: Numerical Analysis for Engineers, at UC Merced</li>
 		  <li> <a href="https://carvalhocamille.github.io/math-131/" title="Github"><span class="big">G</span>ithub repository with lecture notes</a></li>
-	  </ul>
-		 
-		<h2>Fall 2017 </h2>
-        <ul>
-    	  <li>Instructor for <a href="http://catalog.ucmerced.edu/preview_course_nopop.php?catoid=2&coid=2154"> Math 23</a>: Vector Calculus, at UC Merced</li>
-		  <li>Instructor for <a href="http://catalog.ucmerced.edu/preview_course_nopop.php?catoid=2&coid=2167"> Math 131</a>: Numerical Analysis for Engineers, at UC Merced</li>
-         </ul>
-		<h2>Fall 2016 - Spring 2017 </h2>
-        <ul>
-    	<li>Instructor for <a href="http://catalog.ucmerced.edu/preview_course_nopop.php?catoid=2&coid=2154"> Math 23</a>: Vector Calculus, at UC Merced</li>
-         </ul>
-
-		<h2>2015-2016 </h2>
-        <ul>
-   	<li>Teaching assistant at ENSTA ParisTech in <a href="http://wwwdfr.ensta.fr/Cours/?sigle=AO101"
+    	  <li>Fall 2017: Instructor for <a href="http://catalog.ucmerced.edu/preview_course_nopop.php?catoid=2&coid=2154"> Math 23</a>: Vector Calculus, at UC Merced</li>
+		  <li>Fall 2017: Instructor for <a href="http://catalog.ucmerced.edu/preview_course_nopop.php?catoid=2&coid=2167"> Math 131</a>: Numerical Analysis for Engineers, at UC Merced</li>
+    	<li>Spring 2017: Instructor for <a href="http://catalog.ucmerced.edu/preview_course_nopop.php?catoid=2&coid=2154"> Math 23</a>: Vector Calculus, at UC Merced</li>
+    	<li>Fall 2016: Instructor for <a href="http://catalog.ucmerced.edu/preview_course_nopop.php?catoid=2&coid=2154"> Math 23</a>: Vector Calculus, at UC Merced</li>
+		<h2>2012-2016: Teaching assistant at ENSTA Paris</h2>
+   	<li>2012-2016: <a href="http://wwwdfr.ensta.fr/Cours/?sigle=AO101"
        title="AO101"> AO101</a>: Quadratic optimization (first year)</li> 
-         </ul>
-		 
-      <h2>2013-2015: teaching assistant at ENSTA ParsiTech</h2>
- 
-
-
-      <ul>
- 	<li><a href="http://wwwdfr.ensta.fr/Cours/?sigle=AO101"
-     title="AO101"> AO101</a> : Quadratic optimization (first year) and tutoring</li> 
-  	<li><a href="http://wwwdfr.ensta.fr/Cours/?sigle=AO102"
+  	<li>2013-2015: <a href="http://wwwdfr.ensta.fr/Cours/?sigle=AO102"
       title="MA205"> AO102</a> : Dynamic systems, stability and command (first year) and tutoring</li>
- 	<li><a href="http://wwwdfr.ensta.fr/Cours/?sigle=MA205"
+ 	<li>2012-2015: <a href="http://wwwdfr.ensta.fr/Cours/?sigle=MA205"
      title="MA205"> MA205</a> : Function of complex variable (second year) </li>
-       </ul>
-
-     <h2>2012-2013: teaching assistant at ENSTA ParsiTech</h2>
-
-     <ul>
-	  	<li><a href="http://wwwdfr.ensta.fr/Cours/?sigle=AO101"
-	      title="AO101"> AO101</a> : Quadratic optimization (first year) and tutoring</li> 
-	  	<li><a href="http://wwwdfr.ensta.fr/Cours/?sigle=MA205"
-	      title="MA205"> MA205</a> : Function of complex variable (second year) </li>
-	        </ul>
-
-	  
-      <p>
-Occasionnally: 
-      </p>
-      <ul>
- 	<li><a href="http://wwwdfr.ensta.fr/Cours/?sigle=MA201"
-     title="MA201"> MA201</a> : Finite Element Method (second year)</li> 
- 	<li><a href="http://wwwdfr.ensta.fr/Cours/?sigle=MA103"
-     title="MA103"> MA103</a> : hyperbolic systems (first year) </li>
-       </ul>
-
-
-
+	 	<li>Occasionnally: <a href="http://wwwdfr.ensta.fr/Cours/?sigle=MA201"
+	     title="MA201"> MA201</a> : Finite Element Method (second year)</li> 
+	 	<li>Occasionnally: <a href="http://wwwdfr.ensta.fr/Cours/?sigle=MA103"
+	     title="MA103"> MA103</a> : hyperbolic systems (first year) </li> 
+ 
 
       <!-- .footer: the site footer text, links and whatever else -->
       <p class="footer">
