--- a/publis.html
+++ b/publis.html
@@ -77,7 +77,7 @@
 				<h2>2021 </h2>
    				<li >
 					<span class='author'>C. Carvalho</span>,
-   					Modified representations for the close evaluation problem, Mathematical and Computational Applications, (in press), 2021. </span>
+   					Modified representations for the close evaluation problem, Mathematical and Computational Applications, Special issue "Computational Methods for Coupled Problems in Science and Engineering", 26 (2021). </span>
 			 [<a href="https://arxiv.org/abs/2007.07965" title="C20"><span class="big">P</span>reprint</a>]
 			 [<a href="https://github.com/carvalhocamille/Subtraction_techniques" title="Ccodes"><span class="big">C</span>odes</a>]
    				</li>
