--- a/publis.html
+++ b/publis.html
@@ -72,72 +72,63 @@
 			
 			<a href="https://scholar.google.fr/citations?hl=en&view_op=list_works&gmla=AJsN-F4s6Y5QfmzaG85bYE_3YjvOyf9d7RSY2SOELSdv1tAIyT6rGNfTbWsTTIZpCHOfCP1fHl9ldsp1P8aZisVi00sOdwea3Q&user=RY1F4S8AAAAJ
 			https://arxiv.org/abs/2010.07583" title="Scholar"><span class="big">P</span>ublications listed on Google Scholar</a>
-  			<ol class='publisItems' reversed = "">
-				
-				<h2>2021 </h2>
+  			<ol class='publisItems' reversed = "">				
+		<li >
+	  <span class='author'>C. Carvalho</span>,   <span class='author'>Z. Moitier</span>, Asymptotics for metamaterial cavities and their effect on scattering, in revision. </span>
+  [<a href="https://arxiv.org/abs/2010.07583" title="CM20"><span class="big">P</span>reprint</a>][<a href="https://github.com/zmoitier/Asymptotic_metacavity" title="CMcodes"><span class="big">C</span>odes</a>]
+		</li>
+  				<li >
+  			  <span class='author'>C. Carvalho</span>, <span class='author'>C. Ciarlet Jr.</span>, <span class='author'>C. Scheid</span>, Limiting amplitude principle and resonances in plasmonic structures with corners: numerical investigation, Computer Methods in Applied Mechanics and Engineering, 388(2022), 114207. </span>[<a href="https://reader.elsevier.com/reader/sd/pii/S0045782521005387?token=3B04B10CFB0A5C0185ACF536AD1E54FF70E3F24AC745BFEFC7CB47323ED28D36AEEBB15F9BE1DE611E090349F287BE0E&originRegion=us-east-1&originCreation=20211021211952" title="CCS21"><span class="big">P</span>aper</a>]
+  				</li>
    				<li >
 					<span class='author'>C. Carvalho</span>,
-   					Modified representations for the close evaluation problem, Mathematical and Computational Applications, (in press), 2021. </span>
-			 [<a href="https://arxiv.org/abs/2007.07965" title="C20"><span class="big">P</span>reprint</a>]
+   					Modified representations for the close evaluation problem, Mathematical and Computational Applications, 26(2021), 69. </span>
+			 [<a href="https://www.mdpi.com/2297-8747/26/4/69" title="C20"><span class="big">P</span>aper</a>]
 			 [<a href="https://github.com/carvalhocamille/Subtraction_techniques" title="Ccodes"><span class="big">C</span>odes</a>]
    				</li>
   				<li >
-  			  <span class='author'>C. Carvalho</span>, <span class='author'>A. D. Kim</span>, <span class='author'>L. Lewis</span>,  <span class='author'>Z. Moitier</span>, Quadrature by Parity Asymptotic eXpansions (QPAX) for scattering by high aspect ratio particles, SIAM Multiscale Modeling and Simulation, (in press), 2021. </span>[<a href="https://arxiv.org/abs/2105.02136" title="CKLM20"><span class="big">P</span>reprint</a>][<a href="https://github.com/zmoitier/Scattering_BIE_QPAX" title="CKLMcodes"><span class="big">C</span>odes</a>]
+  			  <span class='author'>C. Carvalho</span>, <span class='author'>A. D. Kim</span>, <span class='author'>L. Lewis</span>,  <span class='author'>Z. Moitier</span>, Quadrature by Parity Asymptotic eXpansions (QPAX) for scattering by high aspect ratio particles, SIAM Multiscale Modeling and Simulation, (in press) 2021. </span>[<a href="https://arxiv.org/abs/2105.02136" title="CKLM20"><span class="big">P</span>reprint</a>][<a href="https://github.com/zmoitier/Scattering_BIE_QPAX" title="CKLMcodes"><span class="big">C</span>odes</a>]
   				</li>
-    				<li >
-    			  <span class='author'>C. Carvalho</span>, <span class='author'>C. Ciarlet Jr.</span>, <span class='author'>C. Scheid</span>, Limiting amplitude principle and resonances in plasmonic structures with corners: numerical investigation, Computer Methods in Applied Mechanics and Engineering, (in press), 2021. </span>[<a href="https://hal.archives-ouvertes.fr/hal-03160574/document" title="CM20"><span class="big">P</span>reprint</a>]
-    				</li>
-	    				<li >
-	    			  <span class='author'>C. Carvalho</span>,   <span class='author'>Z. Moitier</span>, Asymptotics for metamaterial cavities and their effect on scattering, in revision. </span>
-	  			  [<a href="https://arxiv.org/abs/2010.07583" title="CM20"><span class="big">P</span>reprint</a>][<a href="https://github.com/zmoitier/Asymptotic_metacavity" title="CMcodes"><span class="big">C</span>odes</a>]
-	    				</li>
-				<h2>2020 </h2>
 				<li >
 					<span class='author'>S. Khatri</span>, <span class='author'>A. D. Kim</span>, <span class='author'>R. Cortes</span>, <span class='author'>C. Carvalho</span>,
   					Close evaluation for layer potentials in three dimensions, 
-  			   Journal of Computational Physics, 423 (2020), 109798. </span>
+  			   Journal of Computational Physics, 423(2020), 109798. </span>
 			  [<a href="https://arxiv.org/pdf/1807.02474.pdf" title="KKCC20"><span class="big">P</span>reprint</a>]
   				</li>
 				<li >
 					 <span class='author'>C. Carvalho</span>, <span class='author'>S. Khatri</span>, <span class='author'>A. D. Kim</span>,
 					Asymptotic approximations for the close evaluation of double-layer potentials, 
-			 SIAM Journal for Scientific Computing, 42 (2020), pp A504-A533. </span>  [<a href="https://arxiv.org/pdf/1810.02483.pdf" title="CKK20"><span class="big">P</span>reprint</a>]
+			 SIAM Journal for Scientific Computing, 42(2020), A504--A533. </span>  [<a href="https://arxiv.org/pdf/1810.02483.pdf" title="CKK20"><span class="big">P</span>reprint</a>]
 				</li>
-				<h2>2019 </h2>
 				<li >
 					<span class='author'>P. Sakkaplangkul</span>, <span class='author'>V. Bokil</span>,
 					A fully fourth order accurate energy stable FDTD method for Maxwell's equations in metamaterials, 
-			  <span class='author'>C. Carvalho</span>, IEEE Journal on Multiscale and Multiphysics Computational Techniques, 4(2019), pp.260--268. </span> [<a href="https://arxiv.org/pdf/1909.06663.pdf" title="SBC20"><span class="big">P</span>reprint</a>]
+			  <span class='author'>C. Carvalho</span>, IEEE Journal on Multiscale and Multiphysics Computational Techniques, 4(2019), 260--268. </span> [<a href="https://arxiv.org/pdf/1909.06663.pdf" title="SBC20"><span class="big">P</span>reprint</a>]
 				</li>
-				<h2>2018 </h2>
   				<li >
 					 <span class='author'>C. Carvalho</span>, <span class='author'>S. Khatri</span>, <span class='author'>A. D. Kim</span>,
   					Asymptotic analysis for close evaluation for layer potentials, 
-  			 Journal of Computational Physics, 655, pp 327-341, 2018. </span> [<a href="https://arxiv.org/pdf/1706.00129.pdf" title="CKK18"><span class="big">P</span>reprint</a>]
+  			 Journal of Computational Physics, 655(2018), 327--341. </span> [<a href="https://arxiv.org/pdf/1706.00129.pdf" title="CKK18"><span class="big">P</span>reprint</a>]
   				</li>
 	  			<li >
 					<span class='author'>A.-S. Bonnet-Ben Dhia</span>, <span class='author'>C. Carvalho, <span class='author'>P. Ciarlet Jr.</span>,
 	  				Mesh requirements for the finite element approximation of problems with sign-changing coefficients,
-	  			 Numerische Mathematik, pp 1-38, 2018. [<a href="https://hal.archives-ouvertes.fr/hal-01335153/document" title="CKK18"><span class="big">P</span>reprint</a>]
+	  			 Numerische Mathematik, 138(2018), 1--38. [<a href="https://hal.archives-ouvertes.fr/hal-01335153/document" title="CKK18"><span class="big">P</span>reprint</a>]
 	  			</li>	
-				<h2>2017 </h2>
   				<li >
 					<span class='author'>C. Carvalho</span>, <span class='author'>L. Chesnel, <span class='author'>P. Ciarlet Jr.</span>,
   					Eigenvalue problems with sign-changing coefficients,
-  			  Compte Rendus Mathématiques, 355 (6), pp 671-675, 2017. </span>  [<a href="https://hal.archives-ouvertes.fr/hal-01394856" title="KKCC20"><span class="big">P</span>reprint</a>]
+  			  Compte Rendus Mathématiques, 355(2017), 671--675. </span>  [<a href="https://hal.archives-ouvertes.fr/hal-01394856" title="KKCC20"><span class="big">P</span>reprint</a>]
   				</li>
-				<h2>2016 </h2>
   			<li >
 				<span class='author'>A.-S. Bonnet-Ben Dhia</span>, <span class='author'>C. Carvalho</span>, <span class='author'>L. Chesnel, <span class='author'>P. Ciarlet Jr.</span>,
   				On the use of Perfectly Matched Layers at corners for scattering problems with sign-changing coefficients,
-  			 Journal of Computational Physics, 322, pp 224-247, 2016.	[<a href="https://arxiv.org/pdf/1511.01932.pdf" title="CKK18"><span class="big">P</span>reprint</a>]	 </li>
+  			 Journal of Computational Physics, 322(2016), 224--247.	[<a href="https://arxiv.org/pdf/1511.01932.pdf" title="CKK18"><span class="big">P</span>reprint</a>]	 </li>
   			</li>	
-			
-			<h2>2013 </h2>
   			<li >
 				<span class='author'>A.-S. Bonnet-Ben Dhia</span>, <span class='author'>C. Carvalho</span>, <span class='author'>L. Chesnel, <span class='author'>P. Ciarlet Jr.</span>,
   				Plasmonic cavity modes: black-hole phenomena captured by Perfectly Matched Layers,
-  				 PROCEEDING of PIERS 2013 in Stockholm, pp 638-642, 2013. </span>	 		
+  				 PROCEEDING of PIERS 2013 in Stockholm, (2013), 638--642. </span>	 		
   			</ol>
 			
   			<h1>Proceedings </h1>
