edit intro page

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
           <div class="width25 floatLeft">
       <img src="img/photos/cc21.jpg" width="145" class="floatLeft">
           </div>
-          <p>
+          <p>  <b> News: I'll be on sabbatical during the Spring 2022. </b><br>
     	      I'm an Assistant Professor in the Department of Applied Mathematics at the University of California Merced.
   		  I'm interested in developing new efficient numerical methods for interface problems, especially in electromagnetics and in plasmonics. I work on wave propagation phenomena and related problems, Finite Element-based methods to accurately capture near-fields in plasmonic structures, integral equation methods for close evaluation problems. <br>
   	 	<a href="https://github.com/carvalhocamille"><img src="img/github2.png" width="55"></a>	
