--- a/Teaching.html
+++ b/Teaching.html
@@ -66,7 +66,9 @@
 
     <!-- #page: holds all page content, as well as footer -->
     <div id="page">
-        <h2>2016-present: Instructor at UC Merced</h2>
+		<h2>Spring 2022: Instructor at INSA de Lyon</h2>
+		
+        <h2>2016-2021: Instructor at UC Merced</h2>
 		
 		  <li>Fall 2021: Instructor for <a href="https://catalog.ucmerced.edu/preview_course_nopop.php?catoid=2&coid=2164"> Math 122</a>: complex analysis, at UC Merced</li>
 		  <li>Spring 2021: Instructor for <a href="https://catalog.ucmerced.edu/preview_course_nopop.php?catoid=6&coid=12511"> Math 150</a>: Mathematical modeling, at UC Merced</li>
