--- a/cursusEN.html
+++ b/cursusEN.html
@@ -72,6 +72,10 @@
 <span >&nbsp;&nbsp;</span> [ <a href="CV_carvalho_09_2021.pdf" title='charger 
 cv_carvalho.pdf' style='text-decoration: none; z-index:100; bottom: -0.4ex;' class='iconButton loadButton'> PDF </a> ] &nbsp;&nbsp; </h1>
 	  
+<h2>2022-</h2>
+  <ul>
+<li>Maîtresse de conférence at INSA de Lyon</li>
+ </ul>
 <h2>2018-</h2>
   <ul>
 <li>Assistant professor at UC Merced</li>
