--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
           <div class="width25 floatLeft">
       <img src="img/photos/cc21.jpg" width="145" class="floatLeft">
           </div>
-          <p>  <b> News: I'll be on sabbatical during the Spring 2022. </b><br>
-    	      I'm an Assistant Professor in the Department of Applied Mathematics at the University of California Merced.
+          <p>  
+    	      I'm an Assistant Professor at INSA de Lyon in the FIMI Department, I'm part of the MMCS team at <a href="http://math.univ-lyon1.fr/spip.php?article13&lang=fr" title="Visit FullAhead">Institut Camille Jordan</a>. I'm also an Assistant Professor of Applied Mathematics at the <a href="https://appliedmath.ucmerced.edu/faculty" title="UCM">University of California Merced</a> (currently on leave). <br>
   		  I'm interested in developing new efficient numerical methods for interface problems, especially in electromagnetics and in plasmonics. I work on wave propagation phenomena and related problems, Finite Element-based methods to accurately capture near-fields in plasmonic structures, integral equation methods for close evaluation problems. <br>
   	 	<a href="https://github.com/carvalhocamille"><img src="img/github2.png" width="55"></a>	
   	 	<a href="https://scholar.google.fr/citations?user=RY1F4S8AAAAJ&hl=en"><img src="img/scholar.png" width="50"></a>	
@@ -80,10 +80,10 @@
   	 	<a href="https://cv.archives-ouvertes.fr/camille-carvalho"><img src="img/hal2.png" width="70"></a>	
   	 	<a href="https://arxiv.org/search/?query=Carvalho%2C+Camille&searchtype=author&abstracts=show&order=-announced_date_first&size=50"><img src="img/arxiv2.jpg" width="75"></a>
 		 <br> <br>
-		  </p>
-  		     
-
-			 
+		  </p> 		     
+		<img src="img/insa.png" width="180">
+		<img src="img/icj.png" width="100">
+		<img src="img/merced-logo.jpg" width="200">
 			 <img src="img/logo_group_research.png" width="500">
             <div>
     		<a href="FEM.html"><img src="img/summary_pmls.png" width="190"></a>
@@ -97,8 +97,8 @@
 	 			   <a href="https://sites.google.com/site/awmmath/"><img src="img/awmlogo.jpg" width="175" title="AWM"></a>
  </div>
   	<p>
-  		 ccarvalho3 AT ucmerced dot edu <br>
-		 UC Merced, 5200 N Lake Rd, Merced CA 95343 <br>
+  		 camille.carvalho AT insa-lyon dot fr <br>
+		 carvalho3 AT ucmerced dot edu <br>
 		 	  </p>
   <h1>Collaborators</h1>
  <li>Vrushali Bokil (OSU)</li>
