--- a/publis.html
+++ b/publis.html
@@ -181,6 +181,7 @@ Waves13_carvalho.pdf' style='text-decoration: none; z-index:100; bottom: -0.4ex;
 			
   			<h1 >Talks</h1>
   			<ol class='publisItems' reversed = "">
+				<li >Accurate evaluation of near-fields in plasmonic structures, Institut Camille Jordan, France, January 2022.</li>
 		    <li >Subtraction techniques for the close evaluation of layer potentials, SIAM CSE, Spring 2021.</li>
 			<li >Accurate evaluation of near-fields in plasmonic structures, University of Nice, France, Spring 2021.</li>
 			<li >Limiting amplitude principle in plasmonic structures with corners, Energy and the Environment seminar, UC Merced, 2020. <a href="https://ucmerced.app.box.com/s/btqk4zw4he5kqldzykj1tohplahilufv"title="UCM">[Video of the talk]</a></li>
