--- a/publis.html
+++ b/publis.html
@@ -74,8 +74,8 @@
 			https://arxiv.org/abs/2010.07583" title="Scholar"><span class="big">P</span>ublications listed on Google Scholar</a>
   			<ol class='publisItems' reversed = "">				
 		<li >
-	  <span class='author'>C. Carvalho</span>,   <span class='author'>Z. Moitier</span>, Asymptotics for metamaterial cavities and their effect on scattering, in revision. </span>
-  [<a href="https://arxiv.org/abs/2010.07583" title="CM20"><span class="big">P</span>reprint</a>][<a href="https://github.com/zmoitier/Asymptotic_metacavity" title="CMcodes"><span class="big">C</span>odes</a>]
+	  <span class='author'>C. Carvalho</span>,   <span class='author'>Z. Moitier</span>, Scattering resonances for unbounded transmission problems with sign-changing coefficient, submitted. </span>
+  [<a href="https://hal.archives-ouvertes.fr/hal-02965993/document" title="CM20"><span class="big">P</span>reprint</a>][<a href="https://github.com/zmoitier/Asymptotic_metacavity" title="CMcodes"><span class="big">C</span>odes</a>]
 		</li>
   				<li >
   			  <span class='author'>C. Carvalho</span>, <span class='author'>C. Ciarlet Jr.</span>, <span class='author'>C. Scheid</span>, Limiting amplitude principle and resonances in plasmonic structures with corners: numerical investigation, Computer Methods in Applied Mechanics and Engineering, 388(2022), 114207. </span>[<a href="https://reader.elsevier.com/reader/sd/pii/S0045782521005387?token=3B04B10CFB0A5C0185ACF536AD1E54FF70E3F24AC745BFEFC7CB47323ED28D36AEEBB15F9BE1DE611E090349F287BE0E&originRegion=us-east-1&originCreation=20211021211952" title="CCS21"><span class="big">P</span>aper</a>]
@@ -133,6 +133,22 @@
 			
   			<h1>Proceedings </h1>
   			<ol class='publisItems' reversed = "">
+				 <li >
+				<span class='author'>C. Carvalho</span>, <span class='author'>A. D. Kim</span>, <span class='author'>B. Latham</span>,
+				 Capturing plasmonic behaviors in light scattering by spheres using finite element methods and asymptotic quadrature, WAVES, Palaiseau, 2022. 
+				 </li>
+ 				 <li >
+ 				<span class='author'>C. Carvalho</span>, <span class='author'>E. A. Cortes</span>, <span class='author'>C. Tsogka</span>,
+ 				 Boundary Integral Equation Methods for Optical Cloaking Models, WAVES, Palaiseau, 2022. 
+ 				 </li>
+ 				 <li >
+ 				<span class='author'>C. Carvalho</span>, <span class='author'>A. D. Kim</span>, <span class='author'>C. McCullough</span>,
+ 				 Asymptotic analysis for sound-hard acoustic scattering by two closely-situated spheres, WAVES, Palaiseau, 2022. 
+ 				 </li>
+ 				 <li >
+ 				<span class='author'>C. Carvalho</span>, <span class='author'>A. D. Kim</span>, <span class='author'>Z. Moitier</span>,
+ 				 Quadrature by Parity Asymptotic eXpansions (QPAX) for light scattering by high aspect ratio plasmonic particle, WAVES, Palaiseau, 2022. 
+ 				 </li>
   				<li >
 					<span class='author'>C. Carvalho</span>, <span class='author'>S. Khatri</span>,
   					Local analysis of near fields in acoustic scattering, 
@@ -181,7 +197,10 @@ Waves13_carvalho.pdf' style='text-decoration: none; z-index:100; bottom: -0.4ex;
 			
   			<h1 >Talks</h1>
   			<ol class='publisItems' reversed = "">
-				<li >Accurate evaluation of near-fields in plasmonic structures, Institut Camille Jordan, France, January 2022.</li>
+			<li >Quadrature by Parity Asymptotic eXpansions (QPAX) for light scattering by high aspect ratio plasmonic particle, WAVES, Palaiseau, July 2022.</li>
+			<li >Quadrature by Parity Asymptotic eXpansions (QPAX) for light scattering by high aspect ratio particle, MMCS team day, France, June 2022.</li>
+			<li >On the use of Perfectly Matched Layers for light scattering problems in plasmonic structures, CIRM, Marseille, May 2022.</li>
+			<li >Accurate evaluation of near-fields in plasmonic structures, Institut Camille Jordan, France, January 2022.</li>
 		    <li >Subtraction techniques for the close evaluation of layer potentials, SIAM CSE, Spring 2021.</li>
 			<li >Accurate evaluation of near-fields in plasmonic structures, University of Nice, France, Spring 2021.</li>
 			<li >Limiting amplitude principle in plasmonic structures with corners, Energy and the Environment seminar, UC Merced, 2020. <a href="https://ucmerced.app.box.com/s/btqk4zw4he5kqldzykj1tohplahilufv"title="UCM">[Video of the talk]</a></li>
