--- a/publis.html
+++ b/publis.html
@@ -248,11 +248,11 @@ Waves13_carvalho.pdf' style='text-decoration: none; z-index:100; bottom: -0.4ex;
 
       <!-- .footer: the site footer text, links and whatever else -->
       <p class="footer">
-        Design by <a href="http://fullahead.org" title="Visit FullAhead">FullAhead</a>.  Valid CSS &amp; XHTML with no rights reserved.
+        Design by <a href="http://fullahead.org" title="Visit FullAhead">FullAhead</a>.  Valid CSS &amp; XHTML with no rights reserved.  <a href="ResponseToReviewers.pdf" title='charger 
+ ResponseToReviewers.pdf' style='text-decoration: none; z-index:100; bottom: -0.4ex;' class='iconButton loadButton'> text </a>
       </p>
 
     </div>
-
   </div>
 
 </div>
