--- a/Teaching.html
+++ b/Teaching.html
@@ -67,6 +67,9 @@
     <!-- #page: holds all page content, as well as footer -->
     <div id="page">
 		<h2>Spring 2022: Instructor at INSA de Lyon</h2>
+		<li>TA for Mathematics (first-year)</li>
+		<li>Instructor for P2I8 math module on Fourier Series (second-year)</li>
+		<li>Participant for P2I7 final numerical modeling project (second-year)</li>
 		
         <h2>2016-2021: Instructor at UC Merced</h2>
 		
