--- a/publis.html
+++ b/publis.html
@@ -134,6 +134,10 @@
   			<h1>Proceedings </h1>
   			<ol class='publisItems' reversed = "">
 				 <li >
+				<span class='author'>M. Bussonnier</span>, <span class='author'>C. Carvalho</span>,
+				 Papyri: better documentation for the scientific ecosystem in Jupyter, Scipy Proceedings, Austin, 2022. 
+				 </li>
+				 <li >
 				<span class='author'>C. Carvalho</span>, <span class='author'>A. D. Kim</span>, <span class='author'>B. Latham</span>,
 				 Capturing plasmonic behaviors in light scattering by spheres using finite element methods and asymptotic quadrature, WAVES, Palaiseau, 2022. 
 				 </li>
@@ -198,7 +202,7 @@ Waves13_carvalho.pdf' style='text-decoration: none; z-index:100; bottom: -0.4ex;
   			<h1 >Talks</h1>
   			<ol class='publisItems' reversed = "">
 			<li >Quadrature by Parity Asymptotic eXpansions (QPAX) for light scattering by high aspect ratio plasmonic particle, WAVES, Palaiseau, July 2022.</li>
-			<li >Quadrature by Parity Asymptotic eXpansions (QPAX) for light scattering by high aspect ratio particle, MMCS team day, France, June 2022.</li>
+			<li >Quadrature by Parity Asymptotic eXpansions (QPAX) for light scattering by high aspect ratio particle, <a href="http://perso.ec-lyon.fr/helene.hivert/MMCS.html">[MMCS team day]</a>, France, June 2022.</li>
 			<li >On the use of Perfectly Matched Layers for light scattering problems in plasmonic structures, CIRM, Marseille, May 2022.</li>
 			<li >Accurate evaluation of near-fields in plasmonic structures, Institut Camille Jordan, France, January 2022.</li>
 		    <li >Subtraction techniques for the close evaluation of layer potentials, SIAM CSE, Spring 2021.</li>
