edit website overall

--- a/group.html
+++ b/group.html
@@ -101,8 +101,9 @@
           </tr>
           <tr>
 			<td></td>
-            <td></td>
-			<td>Advised by <a href="https://faculty.ucmerced.edu/adkim/" title="Visit FullAhead">
+			<td>Co-advised with <a href="https://faculty.ucmerced.edu/adkim/" title="Visit FullAhead">
+			 Arnold D. Kim</a></td>
+			<td>Co-advised with <a href="https://faculty.ucmerced.edu/adkim/" title="Visit FullAhead">
 			 Arnold D. Kim</a></td>
 			<td>Co-advised with <a href="https://sites.ucmerced.edu/ctsogka" title="Visit FullAhead">
 			 Chrysoula Tsogka</a></td>
