--- a/Teaching.html
+++ b/Teaching.html
@@ -66,6 +66,15 @@
 
     <!-- #page: holds all page content, as well as footer -->
     <div id="page">
+		
+		<h2>Spring 2023: Instructor at INSA de Lyon</h2>
+		<li>TA for Mathematics (first-year)</li>
+		<li>TA for Numerical Mathematical Tools (OMNI, first-year)</li>
+		<li>Instructor for P2I8 math module on Fourier Series (second-year)</li>
+		<li>Instructor for P2I7 numerical methods and final project modules (second-year)</li>
+		<h2>Fall 2022: Instructor at INSA de Lyon</h2>
+		<li>TA for Numerical Mathematical Tools (OMNI, first-year)</li>
+		<li>TA for Mathematics in the SGM department (third-year)</li>
 		<h2>Spring 2022: Instructor at INSA de Lyon</h2>
 		<li>TA for Mathematics (first-year)</li>
 		<li>Instructor for P2I8 math module on Fourier Series (second-year)</li>
