--- a/index.html
+++ b/index.html
@@ -98,9 +98,9 @@
  </div>
   	<p>
   		 camille.carvalho AT insa-lyon dot fr <br>
-		 carvalho3 AT ucmerced dot edu <br>
+		 ccarvalho3 AT ucmerced dot edu <br>
 		 	  </p>
-  <h1>Collaborators</h1>
+ <h1>Collaborators</h1>
  <li>Vrushali Bokil (OSU)</li>
  <li>Anne-Sophie Bonnet BenDhia (POEMS)</li>
  <li>Lucas Chesnel (DEFI)</li>
