--- a/publis.html
+++ b/publis.html
@@ -135,7 +135,7 @@
   			<ol class='publisItems' reversed = "">
 				 <li >
 				<span class='author'>M. Bussonnier</span>, <span class='author'>C. Carvalho</span>,
-				 Papyri: better documentation for the scientific ecosystem in Jupyter, Scipy Proceedings, Austin, 2022. 
+				 Papyri: better documentation for the scientific ecosystem in Jupyter, Proceedings of the 21st Python in Science Conference (SciPy 2022), pp. 65-72, 2022. [<a href="https://conference.scipy.org/proceedings/scipy2022/pdfs/bussonnier.pdf" title='BC22' style='text-decoration: none; z-index:100; bottom: -0.4ex;' class='iconButton loadButton'> Preprint </a>] 
 				 </li>
 				 <li >
 				<span class='author'>C. Carvalho</span>, <span class='author'>A. D. Kim</span>, <span class='author'>B. Latham</span>,
@@ -154,9 +154,8 @@
  				 Quadrature by Parity Asymptotic eXpansions (QPAX) for light scattering by high aspect ratio plasmonic particle, WAVES, Palaiseau, 2022. 
  				 </li>
   				<li >
-					<span class='author'>C. Carvalho</span>, <span class='author'>S. Khatri</span>,
-  					Local analysis of near fields in acoustic scattering, 
-  			  <span class='author'>A. D. Kim</span>, WAVES, Minneapolis, 2017. </span> [ <a href="waves_proceeding_17.pdf" title='charger 
+					<span class='author'>C. Carvalho</span>, <span class='author'>S. Khatri</span>, <span class='author'>A. D. Kim</span>,
+  					Local analysis of near fields in acoustic scattering, WAVES, Minneapolis, 2017. </span> [ <a href="waves_proceeding_17.pdf" title='charger 
 waves_proceeding_17.pdf' style='text-decoration: none; z-index:100; bottom: -0.4ex;' class='iconButton loadButton'> Preprint </a> ]
   				</li>
   				<li >
@@ -198,6 +197,7 @@ Waves13_carvalho.pdf' style='text-decoration: none; z-index:100; bottom: -0.4ex;
 				<li > <a href="https://github.com/zmoitier/Asymptotic_metacavity"title="Metacavity">[Asymptotics for metamaterial cavities]</a> (Python) <img src="https://zenodo.org/badge/DOI/10.5281/zenodo.4716362.svg" alt = "DOI"></li>
 				  <li > <a href="https://zenodo.org/record/3934284"title="ST">[Subtraction techniques for the close evaluation problem]</a> (Matlab)  <img src="https://zenodo.org/badge/DOI/10.5281/zenodo.3934284.svg" alt = "DOI"></li>
 				 <li > <a href="https://github.com/arnolddkim/Asymptotic-DLP"title="DLP">[Asymptotic methods for the close evaluation problem]</a> (Mathematica)</li>
+				 </ol>
 			
   			<h1 >Talks</h1>
   			<ol class='publisItems' reversed = "">
@@ -241,6 +241,12 @@ Waves13_carvalho.pdf' style='text-decoration: none; z-index:100; bottom: -0.4ex;
   			    <li >Plasmonic cavity modes with sign changing permittivity, WAVES, Tunis,2013.</li>
   			</ol>
 	
+	<h1 >Outreach</h1>
+	<ol class='publisItems' reversed = "">
+		<li >Modélisation mathématique de phénomènes plasmoniques, Journée formation des mathématiques, Institut Camille Jordan, Université Claude Bernard, Lyon, 2022.</li>
+	<li ><a href="https://mariposa-ca.aauw.net/community-projects/dinner-with-a-scientist/">Diner with a scientist </a>, University of California Merced, 2018. 
+		</li>
+		  </ol>
 
 			<h2> Links </h2>
      <ul>
