--- a/group.html
+++ b/group.html
@@ -70,8 +70,14 @@
      
 		 <img src="img/logo_group_research.png" width="600">
 
-		 	<img src="img/clovers_pic.png" width="720">
-			
+		 <figure>
+    		 <img src="img/clovers_pic.png" width="520">
+    		 <figcaption>Zoom Group meeting in 2020</figcaption>
+		 </figure>
+   		 <figure>
+       		<img src="img/hacktober.jpg" width="520">
+       		 <figcaption>CLOVERS participated to Hacktoberfest 2021 ! </figcaption>
+   		 </figure>
 				 <h1>Group</h1>
 		      <table>
         <tbody>
