--- a/group.html
+++ b/group.html
@@ -71,8 +71,8 @@
 		 <img src="img/logo_group_research.png" width="600">
 
 		 <figure>
-    		 <img src="img/clovers_pic.png" width="520">
-    		 <figcaption>Zoom Group meeting in 2020</figcaption>
+    		 <img src="img/versailles.jpg" width="520">
+    		 <figcaption>CLOVERS at Versailles, WAVES 2022</figcaption>
 		 </figure>
    		 <figure>
        		<img src="img/hacktober.jpg" width="520">
