--- a/publis.html
+++ b/publis.html
@@ -140,18 +140,19 @@
 				 <li >
 				<span class='author'>C. Carvalho</span>, <span class='author'>A. D. Kim</span>, <span class='author'>B. Latham</span>,
 				 Capturing plasmonic behaviors in light scattering by spheres using finite element methods and asymptotic quadrature, WAVES, Palaiseau, 2022. 
+				 [<a href="https://hal.archives-ouvertes.fr/hal-03722963/document" title='CKL22' style='text-decoration: none; z-index:100; bottom: -0.4ex;' class='iconButton loadButton'> Preprint </a>] 
 				 </li>
  				 <li >
  				<span class='author'>C. Carvalho</span>, <span class='author'>E. A. Cortes</span>, <span class='author'>C. Tsogka</span>,
- 				 Boundary Integral Equation Methods for Optical Cloaking Models, WAVES, Palaiseau, 2022. 
+ 				 Boundary Integral Equation Methods for Optical Cloaking Models, WAVES, Palaiseau, 2022. [<a href="https://hal.archives-ouvertes.fr/hal-03722966/document" title='CCT22' style='text-decoration: none; z-index:100; bottom: -0.4ex;' class='iconButton loadButton'> Preprint </a>] 
  				 </li>
  				 <li >
  				<span class='author'>C. Carvalho</span>, <span class='author'>A. D. Kim</span>, <span class='author'>C. McCullough</span>,
- 				 Asymptotic analysis for sound-hard acoustic scattering by two closely-situated spheres, WAVES, Palaiseau, 2022. 
+ 				 Asymptotic analysis for sound-hard acoustic scattering by two closely-situated spheres, WAVES, Palaiseau, 2022. [<a href="https://hal.archives-ouvertes.fr/hal-03722969/document" title='CKM22' style='text-decoration: none; z-index:100; bottom: -0.4ex;' class='iconButton loadButton'> Preprint </a>]  
  				 </li>
  				 <li >
  				<span class='author'>C. Carvalho</span>, <span class='author'>A. D. Kim</span>, <span class='author'>Z. Moitier</span>,
- 				 Quadrature by Parity Asymptotic eXpansions (QPAX) for light scattering by high aspect ratio plasmonic particle, WAVES, Palaiseau, 2022. 
+ 				 Quadrature by Parity Asymptotic eXpansions (QPAX) for light scattering by high aspect ratio plasmonic particle, WAVES, Palaiseau, 2022. [<a href="https://hal.archives-ouvertes.fr/hal-03722962/document" title='CKM22' style='text-decoration: none; z-index:100; bottom: -0.4ex;' class='iconButton loadButton'> Preprint </a>]  
  				 </li>
   				<li >
 					<span class='author'>C. Carvalho</span>, <span class='author'>S. Khatri</span>, <span class='author'>A. D. Kim</span>,
