--- a/publis.html
+++ b/publis.html
@@ -74,7 +74,7 @@
 			https://arxiv.org/abs/2010.07583" title="Scholar"><span class="big">P</span>ublications listed on Google Scholar</a>
   			<ol class='publisItems' reversed = "">				
 		<li >
-	  <span class='author'>C. Carvalho</span>,   <span class='author'>Z. Moitier</span>, Scattering resonances for unbounded transmission problems with sign-changing coefficient, submitted. </span>
+	  <span class='author'>C. Carvalho</span>,   <span class='author'>Z. Moitier</span>, Scattering resonances for unbounded transmission problems with sign-changing coefficient, in revision. </span>
   [<a href="https://hal.archives-ouvertes.fr/hal-02965993/document" title="CM20"><span class="big">P</span>reprint</a>][<a href="https://github.com/zmoitier/Asymptotic_metacavity" title="CMcodes"><span class="big">C</span>odes</a>]
 		</li>
   				<li >
@@ -202,6 +202,7 @@ Waves13_carvalho.pdf' style='text-decoration: none; z-index:100; bottom: -0.4ex;
 			
   			<h1 >Talks</h1>
   			<ol class='publisItems' reversed = "">
+				<li >Numerical methods for the close evaluation of layer potentials in three dimensions, UML-UNC Computational Math seminar, October 2022.</li>
 			<li >Quadrature by Parity Asymptotic eXpansions (QPAX) for light scattering by high aspect ratio plasmonic particle, WAVES, Palaiseau, July 2022.</li>
 			<li >Quadrature by Parity Asymptotic eXpansions (QPAX) for light scattering by high aspect ratio particle, <a href="http://perso.ec-lyon.fr/helene.hivert/MMCS.html">[MMCS team day]</a>, France, June 2022.</li>
 			<li >On the use of Perfectly Matched Layers for light scattering problems in plasmonic structures, CIRM, Marseille, May 2022.</li>
