--- a/group.html
+++ b/group.html
@@ -100,7 +100,7 @@
 		    <br>
           <tr>
 			<td>PI</td>
-            <td>Graduate Student</td>
+            <td>PhD Candidate</td>
 			<td>Graduate Student</td>
 			<td>Graduate Student</td>
 			<td> </td>
