--- a/cursusEN.html
+++ b/cursusEN.html
@@ -72,41 +72,19 @@
 <span >&nbsp;&nbsp;</span> [ <a href="CV_carvalho_09_2021.pdf" title='charger 
 cv_carvalho.pdf' style='text-decoration: none; z-index:100; bottom: -0.4ex;' class='iconButton loadButton'> PDF </a> ] &nbsp;&nbsp; </h1>
 	  
-<h2>2022-</h2>
-  <ul>
-<li>Maîtresse de conférence at INSA de Lyon</li>
- </ul>
-<h2>2018-</h2>
-  <ul>
+<h2>2022-present: Associate Professor</h2>
+<li>Maîtresse de conférence (Associate professor) at INSA de Lyon</li>
+<h2>2018-2022: Assistant Professor</h2>
 <li>Assistant professor at UC Merced</li>
-  </ul>
-<h2>2017-2018: VAP</h2>
-  <ul>
+<h2>2016-2018: VAP</h2>
 <li>Visiting assistant professor at UC Merced</li>
-  </ul>
-
-	  <h2>2016-2017: Postdoctoral fellow and VAP </h2>
-	    <ul>
-	  <li>02/16-06/16 : Post-doctoral fellow at team DEFI (CMAP), numerical investigation of transmission eigenvalues for the interior transmission problem.</li> <br>
-	  <li>07/16-06/17 : Visiting assistant professor at UC Merced</li>
-	    </ul>
-		
-      <h2>2012-2015: Ph.D</h2>
-     <ul>
+ <h2>2016: Postdoctoral researcher </h2>
+	  <li>Postdoc in team DEFI (CMAP), numerical investigation of transmission eigenvalues for the interior transmission problem.</li> 
+	      <h2>2012-2015: Ph.D</h2>
 	<li>PhD in applied mathematics at the Unité de Mathématiques Appliquées, ENSTA ParisTech</li>
-     </ul>
-      <h2>2009-2012: ENSTA ParisTech engineer school cursus, M.S. in Applied Math</h2>
-
-     <ul>
-	<li>2011-2012: thrid year at ENSTA ParisTech specialized in Modelization and Simulation, Master 2 AN&EDP at Université Pierre et Marie Curie</li> <br>
-	<li>2010-2011: second year at ENSTA ParisTech specialized in Mathematical Engineering Simulation </li> <br>
-	<li>2009-2010: first year at ENSTA ParisTech  </li>
-      </ul>
-      <h2>2006-2009: Classes préparatoires </h2>
-	<li>Preparation for engineer school entrance exams, (PCSI, PC*) at lycée Pierre de Fermat (Toulouse) </li>
-
-
-
+      <h2>2009-2012: ENSTA ParisTech, M.S. in Applied Math</h2>
+	<li>Engineer diploma with specialty in mathematical modeling and simulation  </li>
+	<li>Master 2 AN&EDP at Sorbonne Université</li>
 
 
       <!-- .footer: the site footer text, links and whatever else -->
